--- a/html/demo/table_one/main.css
+++ b/html/demo/table_one/main.css
@@ -10,8 +10,9 @@ table {
 table td,
 table th {
     border: solid 1px #ccc;
-    line-height: 22px;
-    height: 22px;
+    line-height: 25px;
+    height: 25px;
+    padding: 5px;
 }
 
 #tbheader td {
