--- a/wx_xcx/app.wxss
+++ b/wx_xcx/app.wxss
@@ -1,15 +1,14 @@
 /**app.wxss**/
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
   box-sizing: border-box;
+  font-family:'微软雅黑';
 } 
 
 /*zyzhang  */
 .main {
-  margin-top: 10px;
+   margin-top: 10px; 
 }
