--- a/wx_xcx/pages/test/test.wxml
+++ b/wx_xcx/pages/test/test.wxml
@@ -5,4 +5,11 @@
       <view class="kind-list-text">{{message}}</view>
     </view>
   </view>
+
+  <!-- 组件模板 -->
+  <my-component>
+     <!-- 这部分内容将被放置在组件 <slot> 的位置上 -->
+     <view>这里是插入到组件slot中的内容</view> 
+  </my-component>
+
 </view>
