自定义组件-dialog

--- a/wx_xcx/pages/index/index.wxml
+++ b/wx_xcx/pages/index/index.wxml
@@ -13,6 +13,10 @@
   </view>
 
   <view class='main'>
+    <button bindtap='clickComponents'>自定义组件</button>
+  </view>
+
+  <view class='main'>
     <button bindtap='getWeather'>getweather.wxml</button>
   </view>
 
