--- a/html/demo/练习/table左侧固定/main.css
+++ b/html/demo/练习/table左侧固定/main.css
@@ -18,12 +18,12 @@ h1,h2,h3 {font-size: 12px;margin: 0;padding: 0;}
 
 .tab-css tr {position: relative;}
 
-.tab-css td,.tab-css th {border: 1px solid #cad9ea;padding: 0 1em 0;}
+.tab-css td,.tab-css th {border: 1px solid #cad9ea;padding: 0 .5em 0;}
 
 .tab-css tr.tr-css {background-color: #f5fafe;height: 30px;}
 
 /*.tab-css tr:nth-child(odd) td {background-color: #ECE9D8;}*/
 
-.fixed {position: fixed;background: #069DD5!important;color: #fff;width: 37px;height: 30px;line-height: 30px;}
+/*.fixed {position: fixed;background: #069DD5!important;color: #fff;width:90px;height: 30px;line-height: 30px;}*/
 
-.td-empty {width: 60px;height: 30px;padding: 0!important;display: inline-block;}
+/*.td-empty {width: 90px;height: 30px;padding: 0!important;display: inline-block;}*/
